syntax = "proto3";
option go_package = "github.com/4rgetlahm/backports/backportRequest";

message BackportRequest {
    string reference = 1;
    string image = 2;
    string new_branch_name = 3;
    string target_branch_name = 4;
    repeated string commits = 5;
}

message BackportResponse {
    string jobName = 1;
}

service BackportRequestService {
    rpc RunBackport(BackportRequest) returns (BackportResponse);
}